--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Odev.ViewModel;
 @model List<ProductsViewModel>
 
-<table
+<table>
+    <h3>Ürünler</h3
         <tr>
             <th>Ürün Adı</th>
             <th>|</th>
