table view changed

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Employee>
 
-<table>
+<table class="table table-striped">
     <h3>Çalışanlar</h3>
         <tr>
             <th>Ad</th>
