--- a/Views/Home/Orders.cshtml
+++ b/Views/Home/Orders.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<OrderDetail>
 
-<table>
+<table class="table table-striped">
     <h3>Siparişler</h3>
         <tr>
             <th>Sipariş No  </th>
