--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Odev.ViewModel;
 @model List<ProductsViewModel>
 
-<table>
+<table class="table table-striped">
     <h3>Ürünler</h3
         <tr>
             <th>Ürün Adı</th>
