profile page updated

--- a/Views/Home/Orders.cshtml
+++ b/Views/Home/Orders.cshtml
@@ -18,7 +18,7 @@
                 <td>@orderDetail.OrderDate</td>
                 <td>|</td>
 
-                <td>@orderDetail.Customer.ContactName</td>
+                <td>@orderDetail.Customer.CompanyName</td>
 
                 <td>
                     <a asp-action="Products" asp-route-orderId="@orderDetail.OrderId">Ürünler</a> 
